Changed some things in code
Need to redo helper function and better error handling

--- a/settings.json
+++ b/settings.json
@@ -1,8 +1,8 @@
 {
     "ip_timeout": 0.8,
     "port_timeout": 0.4,
-    "show_fail": "True",
-    "test_ports": [
+    "showfail": "True",
+    "testports": [
         89,
         443,
         25565,
