Changed the way settings are loaded and refactored a bit of code

--- a/settings.json
+++ b/settings.json
@@ -2,7 +2,7 @@
     "ip_timeout": 0.8,
     "port_timeout": 0.4,
     "showfail": "True",
-    "testports": [
+    "ports": [
         89,
         443,
         25565,
